3.6/anypoint-platform-for-apis/walkthrough-notebook.adoc
= Create an API Notebook

An API Notebook is both an ideal tool for building interactive tutorials and examples to present to users of your API, and a handy way to execute sequences of calls to an API for testing or other purposes. It is a a web-based, persistent, JavaScript scripting workspace that enables live testing and exploring of APIs. An API Notebook can generate an API client based on a RAML API definition, and through it perform authenticated live calls on a real server or on just an empty API interface. You can save an API Notebook as a gist in your GitHub account, making it versionable, forkable, shareable and embeddable anywhere as markdown text.

Notebooks are composed of cells, these come in two types: *text* and *code*. Code cells are executable blocks of JavaScript and text cells provide a neat way to display explanations and documentation to go with these. Any Markdown is valid in text cells, so you can format your text to make it clear and readable. Any JavaScript is valid in code cells, you can even import JavaScript libraries and use functions from external libraries. +

The design of the API Notebook follows the https://en.wikipedia.org/wiki/Literate_programming[literate programming] paradigm, that states that the same code is meant to be human readable as well as executable.



== Before You Begin

This doc will lead you through the creation of a basic API Notebook to contact a simple API, it is part of a larger link:/documentation/display/current/Anypoint+Platform+for+APIs+Walkthrough[Walkthrough] that covers all you can do in the Anypoint Platform for APIs.

The same steps shown here apply to building an API Notebook out of any other existing API that has a RAML interface. If the API you wish to interface with does not have a RAML file, you can link:/documentation/display/current/Walkthrough+Proxy[create a proxy for it].

== Step 1: Create a New API Notebook

Simply visit the https://api-notebook.anypoint.mulesoft.com/[API Notebook] page and create a new Notebook.

You can optionally log in with your GitHub account to be able to save your work as a Gist.

image:/documentation/download/attachments/122752400/home.png?version=1&modificationDate=1403618735227[image]

[TIP]
If the API you wish to use is already registered in the Anypoint Platform and you have admin rights on it, you can create a Notebook for it which automatically includes a line of code that creates the API client you need for it. On the API's Administration Page, just click *Create a Notebook*. If you do this, you can Skip step 2.

== Step 2: Create an API Client

Within a Code cell, you can instance a new API Client. The Notebook uses API clients to accesses an API's RAML definition, from this definition it can obtain information about the API's resources, methods, required arguments, etc. It can then present relevant information to you while you type, helping you code without needing to refer to reference material for the API. Thanks to the API agent, you can also perform real calls to the API when executing a code cell.

You have two ways of creating an API client:

. In a code cell write the following method:
+
[source,xml]
----
API.createClient(alias, url, options? cb?)
----
+
As you type this method, the API Notebook will offer suggestions. These are the attributes you can use in it:
+
[cols=",,",options="header",]
|===
|Parameter |Description |Req/Opt
|`alias` |The name with which you will call this client from now on |Required
|`url` |A URL that directs to the API's RAML definition |Required
|`options` |It allows you to set default headers, a fallback body, etc. Type the method in the notebook and place the cursor on this argument for more details. |Optional
|`cb` |Pass in a custom callback to run when the client has loaded |Optional
|===

+
image:/documentation/download/attachments/122752400/agent.png?version=1&modificationDate=1403721608769[image]


. If the API you wish to connect to is registered in the Anypoint Platform for APIs, you can simply select it out of a list: +
* Hover over the gray circle under an empty cell, it will display a few options, click on *Insert API Client*
+
image:/documentation/download/attachments/122752400/create+API+Client.png?version=1&modificationDate=1403558350643[image]


* Select the API you want
* The Cell will be automatically populated with the necessary code for creating the API Client you selected. You can edit the arguments of the method to change the alias or add optional parameters.

In a single Notebook, you can create API clients for as many APIs as you want and write methods that call these to perform whatever tasks you want.

== Step 3: Push play to Instance an API Client

Writing the necessary code is not enough, you still have to execute this code to retrieve the metadata from the API, which will help you write the rest of your Notebook.

Execute a code cell by either pressing the *Enter* key wile it's selected, or by opening the Cell Menu and selecting *Execute.*

image:/documentation/download/attachments/122752400/execute.png?version=1&modificationDate=1403559763590[image]

[TIP]
Pressing *Enter* executes the currently selected cell; to instead simply add a line break within the cell, press **Shift + Enter**.

== Step 4: Call any method in your API

Once you have instanced an API Client, the Notebook will be able to predictively suggest code and display reference material about method parameters, etc.

If your Notebook is intended to be a tutorial for users of your API, it is recommended that you write one JavaScript command per cell, and document each with a corresponding text cell. Walk your users through the typical operations they may want to perform with your API, then invite them to change the parameters around and explore the various options.

You can also click the code icon to view and edit the Notebook as plain markdown text:

image:/documentation/download/attachments/122752400/code.png?version=1&modificationDate=1403725366898[image]

== Step 5: Push Play

You can execute all code cells in your Notebook sequentially by clicking the "play" button in the toolbar.

image:/documentation/download/attachments/122752400/play.png?version=1&modificationDate=1403645759867[image]

Execute individual code cells by either pressing the *Enter* key wile selecting one, or by opening the Cell Menu and selecting *Execute.*

image:/documentation/download/attachments/122752400/execute.png?version=1&modificationDate=1403559763590[image]

[NOTE]
Keep in mind that every time you load a Notebook,  you must first execute the command that creates the API client before you can call any other methods that use that API.


== Step 6: Save and Share

Notebooks are saved to GitHub as gists. To save a gist, you must first log in to your GitHub account and authorize this application to write to it. Then just click on the *save* icon.

image:/documentation/download/attachments/122752400/save.png?version=1&modificationDate=1403725817192[image]

To share of embed your Notebook, click the *share* icon. You will be offered two links, one for sharing the URL, the other for embedding the Notebook into any site.

image:/documentation/download/attachments/122752400/share.png?version=1&modificationDate=1403725049567[image]

== See Also

* View some https://api-notebook.anypoint.mulesoft.com/#examples[example API Notebooks].
* See more information about http://www.mulesoft.org/documentation/display/current/Engaging+Users+of+Your+API[Engaging Users of Your API].
